post spring 2025 assignments

--- a/assts/asst01.html
+++ b/assts/asst01.html
@@ -193,7 +193,7 @@ $ ./hello
 Hello World</code></pre>
 </div>
 </div>
-<h3 id="_guessing_game" class="discrete">Guessing Game</h3>
+<h3 id="_math_game" class="discrete">Math Game</h3>
 <div class="paragraph">
 <p>In the directory, <code>A01</code>, implement a simple math game that asks a user a series of addition problems
 and keeps track of the number of correct responses.</p>
@@ -560,7 +560,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-16 13:03:50 -0500
+Last updated 2025-01-18 14:12:18 -0500
 </div>
 </div>
 </body>
