updates for week01

--- a/schedule.html
+++ b/schedule.html
@@ -489,7 +489,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Function stacks, scope</p>
+<p>Topics: Function stacks, strings, arrays, introductory pointers</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
@@ -501,7 +501,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Jan 28: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.">Assignment 02</a>: Due Jan 31</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Due Jan 31</p>
 </li>
 </ul>
 </div></div></td>
@@ -792,7 +792,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-16 13:06:53 -0500
+Last updated 2025-01-24 07:50:10 -0500
 </div>
 </div>
 </body>
