--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 <p>Assignment 01 is Posted! <a href="assts/asst01.html">Assignment 01</a>: Due January 24</p>
 </li>
 <li>
-<p>Our first lab will be on January 21st about using github</p>
+<p>Assignment 02 is due Jan 31: <a href="assts/asst02.html">Assignment 02</a>: Learn to C</p>
+</li>
+<li>
+<p>Lab Jan 28: <a href="studyguide01.html">Worksheet: Study Guide 1</a></p>
 </li>
 </ul>
 </div>
@@ -126,7 +129,7 @@ will be introduced at the end of the course.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Tianyun Song</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231/Zoom</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
 </tr>
 </tbody>
@@ -190,7 +193,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Topics: Function stacks, scope</p>
+<p>Topics: Function stacks, strings, arrays, introductory pointers</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming">Sections 2.1-2.8, 2.9 (Command line arguments only)</a></p>
@@ -202,7 +205,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab Jan 28: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.">Assignment 02</a>: Due Jan 31</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Due Jan 31</p>
 </li>
 </ul>
 </div></div></td>
@@ -947,7 +950,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-16 12:44:41 -0500
+Last updated 2025-01-24 07:48:31 -0500
 </div>
 </div>
 </body>
