update office hours

--- a/index.html
+++ b/index.html
@@ -58,16 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Welcome to systems programming!</p>
-</li>
-<li>
-<p>Assignment 01 is Posted! <a href="assts/asst01.html">Assignment 01</a>: Due January 24</p>
-</li>
-<li>
 <p>Assignment 02 is due Jan 31: <a href="assts/asst02.html">Assignment 02</a>: Learn to C</p>
 </li>
 <li>
 <p>Lab Jan 28: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
+</li>
+<li>
+<p><strong>Next Week</strong> Jam01 (Lab) and Quiz 01 (Thursday in class)</p>
 </li>
 </ul>
 </div>
@@ -129,8 +126,8 @@ will be introduced at the end of the course.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Office Hours - Tianyun Song</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231/Zoom</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">TBD</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Thursdays, 5-6PM</p></td>
 </tr>
 </tbody>
 </table>
@@ -950,7 +947,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-28 09:30:21 -0500
+Last updated 2025-01-29 11:46:21 -0500
 </div>
 </div>
 </body>
