resources for week03

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
 <p>Assignment 02 is due Jan 31: <a href="assts/asst02.html">Assignment 02</a>: Learn to C</p>
 </li>
 <li>
-<p>Lab Jan 28: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
+<p>Assignment 03 is due Feb 7: <a href="assts/asst03.html">Assignment 03</a>: If you malloc something, set it free</p>
 </li>
 <li>
-<p><strong>Next Week</strong> Jam01 (Lab) and Quiz 01 (Thursday in class)</p>
+<p>Quiz Feb 6: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
+</li>
+<li>
+<p>Lab Feb 4: Jam01</p>
 </li>
 </ul>
 </div>
@@ -211,7 +214,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">February 4, 6 <a id="week03"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Pointers, malloc/free</strong></p>
+<p><strong>More pointers, malloc/free</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -947,7 +950,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-29 11:46:21 -0500
+Last updated 2025-01-31 10:53:28 -0500
 </div>
 </div>
 </body>
