--- a/schedule.html
+++ b/schedule.html
@@ -510,7 +510,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">February 4, 6 <a id="week03"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Pointers, malloc/free</strong></p>
+<p><strong>More pointers, malloc/free</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -792,7 +792,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-24 07:50:10 -0500
+Last updated 2025-01-31 10:54:05 -0500
 </div>
 </div>
 </body>
