--- a/assts/asst02.html
+++ b/assts/asst02.html
@@ -77,7 +77,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -352,7 +352,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-18 14:20:04 -0500
+Last updated 2025-02-05 09:53:57 -0500
 </div>
 </div>
 </body>
