--- a/assts/asst03.html
+++ b/assts/asst03.html
@@ -66,7 +66,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -342,7 +342,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-31 10:52:04 -0500
+Last updated 2025-02-05 09:54:33 -0500
 </div>
 </div>
 </body>
