--- a/assts/asst05.html
+++ b/assts/asst05.html
@@ -588,7 +588,7 @@ Writing file monalisa-glitch.ppm</code></pre>
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -1043,7 +1043,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-18 15:32:35 -0500
+Last updated 2025-02-05 09:54:45 -0500
 </div>
 </div>
 </body>
