--- a/assts/asst08-2.html
+++ b/assts/asst08-2.html
@@ -57,7 +57,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -255,7 +255,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-28 10:24:53 -0400
+Last updated 2025-02-05 09:54:57 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
