--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -61,7 +61,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -263,7 +263,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-18 15:44:00 -0500
+Last updated 2025-02-05 09:55:00 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
