--- a/assts/asst09-1.html
+++ b/assts/asst09-1.html
@@ -51,7 +51,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -212,7 +212,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 10:25:42 -0400
+Last updated 2025-02-05 09:55:05 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
