--- a/assts/asst09-2.html
+++ b/assts/asst09-2.html
@@ -53,7 +53,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -305,7 +305,7 @@ $ git status</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 10:57:00 -0400
+Last updated 2025-02-05 09:55:07 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
