--- a/assts/asst09.html
+++ b/assts/asst09.html
@@ -60,7 +60,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -372,7 +372,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-18 15:52:13 -0500
+Last updated 2025-02-05 09:55:10 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
