--- a/assts/asst12.html
+++ b/assts/asst12.html
@@ -67,7 +67,7 @@
 <p>Run the command <code>git fetch upstream</code></p>
 </li>
 <li>
-<p>Run the command <code>git merge upstream/master</code></p>
+<p>Run the command <code>git merge upstream/main</code></p>
 </li>
 </ul>
 </div>
@@ -434,7 +434,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-17 16:40:41 -0500
+Last updated 2025-02-05 09:55:20 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
