--- a/assts/asst05.html
+++ b/assts/asst05.html
@@ -348,7 +348,7 @@ Reading feep-raw.ppm with width 4 and height 4
 @;@@
 @@%@
 :@@
-$ <strong>./ascii_image smile.ppm</strong>
+$ <strong>./ascii_image smile-raw.ppm</strong>
 Reading smile.ppm with width 14 and height 19
 @@@@@@@@@@@@@@
 @@@@@@@@@@@@@@
@@ -1043,7 +1043,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-05 09:54:45 -0500
+Last updated 2025-02-07 14:16:45 -0500
 </div>
 </div>
 </body>
