--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -81,7 +81,7 @@
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="img/processes.png" alt="]">
+<img src="img/processes.png" alt="processes">
 </div>
 </div>
 <div class="listingblock">
@@ -263,7 +263,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-05 09:55:00 -0500
+Last updated 2025-02-05 10:15:09 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
