--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Assignment 02 is due Jan 31: <a href="assts/asst02.html">Assignment 02</a>: Learn to C</p>
-</li>
-<li>
 <p>Assignment 03 is due Feb 7: <a href="assts/asst03.html">Assignment 03</a>: If you malloc something, set it free</p>
 </li>
 <li>
-<p>Quiz Feb 6: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
+<p>Assignment 04 is due Feb 14: <a href="assts/asst04.html">Assignment 04</a>: Watch where you point!</p>
 </li>
 <li>
-<p>Lab Feb 4: Jam01</p>
+<p>Quiz Feb 11: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
+</li>
+<li>
+<p>Lab Feb 11: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
 </li>
 </ul>
 </div>
@@ -219,6 +219,10 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
+<p>Class CANCELED Feb 6**</p>
+<div class="ulist">
+<ul>
+<li>
 <p>Topics: Heap, dynamically-allocated memory (malloc, free), More arrays</p>
 </li>
 <li>
@@ -228,10 +232,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab Feb 4: <strong>Code Jam 01</strong></p>
 </li>
 <li>
-<p>Class Feb 6: <strong>Quiz 01</strong></p>
-</li>
-<li>
 <p><a href="assts/asst03.">Assignment 03</a>: Due Feb 7</p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div></div></td>
@@ -244,6 +248,9 @@ on lecture content, worksheets, and assignments.</p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Class Feb 11: <strong>Quiz 01</strong></p>
+</li>
 <li>
 <p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
@@ -274,7 +281,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.">Assignment 05</a>: Due Feb 21</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 21</p>
 </li>
 <li>
 <p>Lab Feb 18: <strong>Code Jam 02</strong></p>
@@ -950,7 +957,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-31 10:53:28 -0500
+Last updated 2025-02-07 13:43:46 -0500
 </div>
 </div>
 </body>
