--- a/schedule.html
+++ b/schedule.html
@@ -515,6 +515,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
+<p>Class CANCELED Feb 6**</p>
+<div class="ulist">
+<ul>
+<li>
 <p>Topics: Heap, dynamically-allocated memory (malloc, free), More arrays</p>
 </li>
 <li>
@@ -524,10 +528,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Feb 4: <strong>Code Jam 01</strong></p>
 </li>
 <li>
-<p>Class Feb 6: <strong>Quiz 01</strong></p>
-</li>
-<li>
 <p><a href="assts/asst03.">Assignment 03</a>: Due Feb 7</p>
+</li>
+</ul>
+</div>
 </li>
 </ul>
 </div></div></td>
@@ -540,6 +544,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Class Feb 11: <strong>Quiz 01</strong></p>
+</li>
 <li>
 <p>Topics: Linked lists in C. GDB, Valgrind</p>
 </li>
@@ -570,7 +577,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.">Assignment 05</a>: Due Feb 21</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Feb 21</p>
 </li>
 <li>
 <p>Lab Feb 18: <strong>Code Jam 02</strong></p>
@@ -792,7 +799,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-31 10:54:05 -0500
+Last updated 2025-02-07 14:16:52 -0500
 </div>
 </div>
 </body>
