--- a/index.html
+++ b/index.html
@@ -58,16 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Assignment 03 is due Feb 7: <a href="assts/asst03.html">Assignment 03</a>: If you malloc something, set it free</p>
+<p>Assignment 05 is due Feb 21: <a href="assts/asst05.html">Assignment 05</a>: Image conscious</p>
 </li>
 <li>
-<p>Assignment 04 is due Feb 14: <a href="assts/asst04.html">Assignment 04</a>: Watch where you point!</p>
+<p>Quiz Feb 20: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
 </li>
 <li>
-<p>Quiz Feb 11: <a href="studyguide1.html">Worksheet: Study Guide 1</a></p>
-</li>
-<li>
-<p>Lab Feb 11: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
+<p>Coding Lab Feb 18: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
 </li>
 </ul>
 </div>
@@ -957,7 +954,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-07 13:43:46 -0500
+Last updated 2025-02-16 14:09:15 -0500
 </div>
 </div>
 </body>
