--- a/assts/asst04.html
+++ b/assts/asst04.html
@@ -16,9 +16,10 @@
 <ul class="sectlevel1">
 <li><a href="#_assignment_4_watch_where_you_point">Assignment 4: Watch where you point!</a></li>
 <li><a href="#_update_your_repository">1. Update your repository</a></li>
-<li><a href="#_sorted_snacks">2. Sorted Snacks</a></li>
-<li><a href="#_submit_your_work">3. Submit your Work</a></li>
-<li><a href="#_grading_rubric">4. Grading Rubric</a></li>
+<li><a href="#_magic_square">2. Magic Square</a></li>
+<li><a href="#_sorted_snacks">3. Sorted Snacks</a></li>
+<li><a href="#_submit_your_work">4. Submit your Work</a></li>
+<li><a href="#_grading_rubric">5. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -78,6 +79,11 @@
 <div class="paragraph">
 <p>The <code>fetch</code> and <code>merge</code> commands update your repository with any changes from the original.</p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_magic_square">2. Magic Square</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>Implement a program, <code>magic_square.c</code>, that tests whether a given matrix is a magic square.
 A <a href="https://en.wikipedia.org/wiki/Magic_square">magic square</a> is an N by N matrix where each
@@ -123,7 +129,7 @@ M is a magic square (magic constant = 1)</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_sorted_snacks">2. Sorted Snacks</h2>
+<h2 id="_sorted_snacks">3. Sorted Snacks</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Implement a program, <code>sorted_snackbar.c</code>, that allows users to add snacks to the snackbar and displays
@@ -175,7 +181,7 @@ Welcome to Sorted Sally's Snack Bar.
 </div>
 </div>
 <div class="sect1">
-<h2 id="_submit_your_work">3. Submit your Work</h2>
+<h2 id="_submit_your_work">4. Submit your Work</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Before submitting, check that</p>
@@ -208,7 +214,7 @@ $ git status</pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_grading_rubric">4. Grading Rubric</h2>
+<h2 id="_grading_rubric">5. Grading Rubric</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>Assignment rubrics</strong></p>
@@ -219,20 +225,39 @@ $ git status</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>(4 points) Most danceable</p>
+<p>(2 points) Magic Square</p>
 <div class="ulist">
 <ul>
 <li>
 <p>(0.1 points) style and header comment</p>
 </li>
 <li>
-<p>(0.4 points) defines a struct, reads and parses songlist.csv correctly, and has correct user input</p>
+<p>(0.4 points) reads in matrix from stdin</p>
 </li>
 <li>
-<p>(1.5 points) correctly handles deletion and insertion to a linked list</p>
+<p>(0.5 points) creates/deletes 2D matrix using malloc/free</p>
 </li>
 <li>
-<p>(2.0 points) handles file and linked list nodes correctly (no memory errors!)</p>
+<p>(1.0 points) No memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(2 points) Sorted Snacks</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.4 points) defines a struct correctly handles deletion and insertion to a linked list</p>
+</li>
+<li>
+<p>(0.5 points) correctly sorts and displays snacks based on name, cost, or quantity</p>
+</li>
+<li>
+<p>(1.0 points) handles file and linked list nodes correctly (no memory errors!)</p>
 </li>
 </ul>
 </div>
@@ -270,7 +295,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-18 14:33:20 -0500
+Last updated 2025-02-17 11:59:22 -0500
 </div>
 </div>
 </body>
