remove broken link

--- a/assts/asst05.html
+++ b/assts/asst05.html
@@ -457,7 +457,7 @@ Reading smile.ppm with width 14 and height 19
 <h2 id="_glitch">Glitch</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="https://en.wikipedia.org/wiki/Glitch_art">Glitch Art</a> is the practice of leveraging technological errors for artistic purposes. Some cool examples can be found here by <a href="https://mobile.twitter.com/glitchartbot">glitchartbot</a>.</p>
+<p><a href="https://en.wikipedia.org/wiki/Glitch_art">Glitch Art</a> is the practice of leveraging technological errors for artistic purposes.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -687,7 +687,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-18 11:43:21 -0500
+Last updated 2025-02-18 11:46:55 -0500
 </div>
 </div>
 </body>
