remove incorrect link

--- a/assts/asst05.html
+++ b/assts/asst05.html
@@ -301,7 +301,7 @@ Testing file feep-raw.ppm: 4 4
 <h3 id="_write_ppm">Write PPM</h3>
 <div class="paragraph">
 <p>Implement a new function, <code>write_ppm</code>, defined in <code>write_ppm.c</code>.
-Similarly to <a href="asst04.html">Assignment 04</a>, you should choose one definition of <code>write_ppm</code> to
+Similarly to <code>read_ppm</code>, you should choose one definition of <code>write_ppm</code> to
 implement, depending on whether you use either a "flat array" or an "array of arrays" to store your pixels.</p>
 </div>
 <div class="paragraph">
@@ -687,7 +687,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-18 11:46:55 -0500
+Last updated 2025-02-18 11:51:02 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
