--- a/assts/asst06.html
+++ b/assts/asst06.html
@@ -15,12 +15,9 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_assignment_6">Assignment 6:</a></li>
-<li><a href="#_matching_braces">Matching braces</a>
-<ul class="sectlevel2">
+<li><a href="#_matching_braces">Matching braces</a></li>
 <li><a href="#_tree">Tree</a></li>
 <li><a href="#_dependencies">Dependencies</a></li>
-</ul>
-</li>
 <li><a href="#_submit_your_work">Submit your work</a></li>
 <li><a href="#_grading_rubric">Grading Rubric</a></li>
 </ul>
@@ -143,8 +140,11 @@ Unlike last week, you need to open the files as text data. See <a href="https://
 </tr>
 </table>
 </div>
-<div class="sect2">
-<h3 id="_tree">Tree</h3>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_tree">Tree</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>In the file, <code>tree.c</code>, implement a binary search tree. Do not change the header
 <code>tree.h</code>, nor the function declarations in <code>tree.c</code>. But you can add functions to <code>tree.c</code>!
@@ -192,8 +192,10 @@ X</pre>
 </ul>
 </div>
 </div>
-<div class="sect2">
-<h3 id="_dependencies">Dependencies</h3>
+</div>
+<div class="sect1">
+<h2 id="_dependencies">Dependencies</h2>
+<div class="sectionbody">
 <div class="paragraph">
 <p>A <em>dependency</em> is a general software term for any software required by another. In this question,
 we will store files in a binary search tree so we can list their file dependencies,
@@ -271,7 +273,6 @@ $ quit</pre>
 <p>Strip the filenames from the <code>#include</code> lines when printing dependencies.</p>
 </li>
 </ul>
-</div>
 </div>
 </div>
 </div>
@@ -387,7 +388,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-22 09:38:31 -0500
+Last updated 2025-02-22 09:50:23 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
