updates for week 06

--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Assignment 05 is due Feb 21: <a href="assts/asst05.html">Assignment 05</a>: Image conscious</p>
+<p>Assignment 06 is due Feb 28: <a href="assts/asst06.html">Assignment 06</a>: Watch where you point II</p>
 </li>
 <li>
-<p>Quiz Feb 20: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
-</li>
-<li>
-<p>Coding Lab Feb 18: <a href="studyguide2.html">Worksheet: Study Guide 2</a></p>
+<p>Lab Feb 25: <a href="studyguide3.html">Worksheet: Study Guide 3</a></p>
 </li>
 </ul>
 </div>
@@ -954,7 +951,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-16 14:09:15 -0500
+Last updated 2025-02-22 09:54:13 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
