--- a/assts/asst06.html
+++ b/assts/asst06.html
@@ -215,12 +215,8 @@ giving the filename.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>$ <strong>./dependency <code> ` </code>find code -name "<strong>.h" -o -name "</strong>.cpp"<code> ` </code></strong>
+<pre>$ <strong>./dependency <code> ` </code>find code -name "*.h" -o -name "*.cpp"<code> ` </code></strong>
 Processing 11 files
-Thread 0 processing 4 files (arguments 2 to 6)
-Thread 1 processing 4 files (arguments 6 to 10)
-Thread 2 processing 3 files (arguments 10 to 13)
-Elapsed time is 0.000496
 $ list
 code/Animal.h
 code/Bird.h
@@ -393,7 +389,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-22 09:53:18 -0500
+Last updated 2025-02-25 16:20:01 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
