--- a/studyguide3.html
+++ b/studyguide3.html
@@ -247,7 +247,7 @@ to give feedback on your responses.</p>
 <p>to a signed integer</p>
 </li>
 <li>
-<p>to an 24-bit RGBA color, e.g. consider each byte as a value for red, green, and blue</p>
+<p>to an 24-bit RGB color, e.g. consider each byte as a value for red, green, and blue</p>
 </li>
 <li>
 <p>to an ASCII character string</p>
@@ -421,7 +421,7 @@ Your new number: 0x6d (109)</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 20:22:04 -0500
+Last updated 2025-02-25 16:20:41 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
