--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 <p>Assignment 06 is due Feb 28: <a href="assts/asst06.html">Assignment 06</a>: Watch where you point II</p>
 </li>
 <li>
-<p>Lab Feb 25: <a href="studyguide3.html">Worksheet: Study Guide 3</a></p>
+<p>Assignment 07 is due March 6: <a href="assts/asst07.html">Assignment 07</a>: Secret Messages</p>
+</li>
+<li>
+<p>Lab March 2: Code Jam 03</p>
+</li>
+<li>
+<p>Quiz March 4: <a href="studyguide3.html">Study Guide</a></p>
 </li>
 </ul>
 </div>
@@ -290,6 +296,26 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">February 25, 27 <a id="week06"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Bit Ops</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
+</li>
+<li>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due Feb 28</p>
+</li>
+<li>
+<p>Lab Feb 25: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">March 4,6 <a id="week07"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Assembly</strong></p>
 </div>
 <div class="ulist">
@@ -304,27 +330,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.">Assignment 06</a>: Due Feb 28</p>
-</li>
-<li>
-<p>Lab Feb 25: Quiz 03 Practice, <a href="studyguide3.html">Study Guide 3</a></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">7</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">March 4,6 <a id="week07"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>The operating system, Processes</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
-</li>
-<li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due THURSDAY March 6 <strong>Hardcopy due at Park 200B</strong></p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due Friday March 7</p>
 </li>
 <li>
 <p>Lab March 4: <strong>*Code Jam 03</strong></p>
@@ -353,18 +359,15 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 18, 20 <a id="week09"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads I</strong></p>
+<p><strong>The operating system, Processes</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
-</li>
-<li>
-<p><a href="assts/asst08.">Assignment 08</a>: Due March 21</p>
+<p><a href="assts/asst08.html">Assignment 08</a>: Due THURSDAY March 20 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
 <p>Lab March 18: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
@@ -376,10 +379,13 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">March 25, 27 <a id="week10"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads II</strong></p>
+<p><strong>Threads I</strong></p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
+</li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
@@ -399,7 +405,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 1, 3 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
+<p><strong>Threads II</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -416,7 +422,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 8, 10 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads IV</strong></p>
+<p><strong>Threads III</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -951,7 +957,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-22 09:54:13 -0500
+Last updated 2025-02-28 10:33:10 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
