--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>Lab March 2: Code Jam 03</p>
 </li>
 <li>
-<p>Quiz March 4: <a href="studyguide3.html">Study Guide</a></p>
+<p>Quiz March 6: <a href="studyguide3.html">Study Guide</a></p>
 </li>
 </ul>
 </div>
@@ -336,7 +336,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Lab March 4: <strong>*Code Jam 03</strong></p>
 </li>
 <li>
-<p>Class <strong>Quiz 03</strong></p>
+<p>Class March 6 <strong>Quiz 03</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -957,7 +957,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-28 10:33:10 -0500
+Last updated 2025-02-28 14:21:10 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
