--- a/schedule.html
+++ b/schedule.html
@@ -632,7 +632,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab March 4: <strong>*Code Jam 03</strong></p>
 </li>
 <li>
-<p>Class <strong>Quiz 03</strong></p>
+<p>Class March 6 <strong>Quiz 03</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -799,7 +799,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-02-28 10:31:50 -0500
+Last updated 2025-02-28 14:21:01 -0500
 </div>
 </div>
 </body>
