--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -1075,7 +1075,7 @@ you can use the same techniques to</p>
 <p>Develop a buffer overrun exploit to call a function directly, without using the secret codes.</p>
 </li>
 <li>
-<p><a href="secret-s25-x86-64.tar.gz">Download the binary</a></p>
+<p><a href="secretGame-x86-64.tar.gz">Download the binary</a></p>
 </li>
 <li>
 <p><a href="https://diveintosystems.org/book/C3-C_debug/gdb_assembly.html#_debugging_assembly_code">Dive into systems: Debugging assembly code</a></p>
@@ -1117,7 +1117,7 @@ you can use the same techniques to</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-06 11:45:35 -0500
+Last updated 2025-03-06 16:03:28 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
