--- a/index.html
+++ b/index.html
@@ -58,16 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Assignment 06 is due Feb 28: <a href="assts/asst06.html">Assignment 06</a>: Watch where you point II</p>
-</li>
-<li>
 <p>Assignment 07 is due March 6: <a href="assts/asst07.html">Assignment 07</a>: Secret Messages</p>
 </li>
 <li>
-<p>Lab March 2: Code Jam 03</p>
-</li>
-<li>
-<p>Quiz March 6: <a href="studyguide3.html">Study Guide</a></p>
+<p>Assignment 08 is due March 20 (<strong>Thursday, hard-copy</strong>): <a href="assts/asst08.html">Assignment 08</a>: Some Assembly Required</p>
 </li>
 </ul>
 </div>
@@ -957,7 +951,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-06 11:44:23 -0500
+Last updated 2025-03-06 16:07:24 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
