--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -1104,7 +1104,7 @@ you can use the same techniques to</p>
 &#160;<br></p>
 </div>
 <div class="paragraph">
-<p>3) Give the buffer contents that can be used to overwrite the stack and jump to the funtion, <code>winGame</code>.
+<p>3) Give the buffer contents that can be used to overwrite the stack and jump to the funtion, <code>endGame</code>.
 &#160;<br>
 &#160;<br>
 &#160;<br>
@@ -1117,7 +1117,7 @@ you can use the same techniques to</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-06 16:03:28 -0500
+Last updated 2025-03-06 16:09:26 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
