--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Assignment 07 is due March 6: <a href="assts/asst07.html">Assignment 07</a>: Secret Messages</p>
+<p>Lab March 25th: Code Jam 04</p>
 </li>
 <li>
-<p>Assignment 08 is due March 20 (<strong>Thursday, hard-copy</strong>): <a href="assts/asst08.html">Assignment 08</a>: Some Assembly Required</p>
+<p>Class March 27th: Quiz 04 <a href="studyguide4.html">Study Guide 04</a></p>
+</li>
+<li>
+<p>Assignment 09 is due March 28 <a href="assts/asst09.html">Assignment 09</a>: Trust the process</p>
 </li>
 </ul>
 </div>
@@ -384,7 +387,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09.">Assignment 09</a>: Due March 28</p>
+<p><a href="assts/asst09.html">Assignment 09</a>: Due March 28</p>
 </li>
 <li>
 <p>Lab March 25: <strong>Code Jam 04</strong></p>
@@ -951,7 +954,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-06 16:07:24 -0500
+Last updated 2025-03-21 20:41:18 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
