--- a/schedule.html
+++ b/schedule.html
@@ -686,7 +686,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst09.">Assignment 09</a>: Due March 28</p>
+<p><a href="assts/asst09.html">Assignment 09</a>: Due March 28</p>
 </li>
 <li>
 <p>Lab March 25: <strong>Code Jam 04</strong></p>
@@ -799,7 +799,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-06 11:44:42 -0500
+Last updated 2025-03-21 20:41:39 -0400
 </div>
 </div>
 </body>
