--- a/schedule.html
+++ b/schedule.html
@@ -706,7 +706,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst10.">Assignment 10</a>: Due April 4th</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 4th</p>
 </li>
 <li>
 <p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
@@ -724,6 +727,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/asst11.">Assignment 11</a>: Due April 4th</p>
 </li>
 <li>
 <p>Class April 10: <strong>Quiz 05</strong></p>
@@ -799,7 +805,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-21 20:41:39 -0400
+Last updated 2025-03-30 11:33:35 -0400
 </div>
 </div>
 </body>
