--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Lab March 25th: Code Jam 04</p>
+<p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
 </li>
 <li>
-<p>Class March 27th: Quiz 04 <a href="studyguide4.html">Study Guide 04</a></p>
-</li>
-<li>
-<p>Assignment 09 is due March 28 <a href="assts/asst09.html">Assignment 09</a>: Trust the process</p>
+<p>Assignment 10 is due April 4 <a href="assts/asst10.html">Assignment 10</a>: Sending mixed signals</p>
 </li>
 </ul>
 </div>
@@ -407,7 +404,10 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/asst10.">Assignment 10</a>: Due April 4th</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due April 4th</p>
 </li>
 <li>
 <p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
@@ -425,6 +425,9 @@ on lecture content, worksheets, and assignments.</p>
 <ul>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/asst11.">Assignment 11</a>: Due April 4th</p>
 </li>
 <li>
 <p>Class April 10: <strong>Quiz 05</strong></p>
@@ -954,7 +957,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-21 20:41:18 -0400
+Last updated 2025-03-30 11:32:28 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
