--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Lab April 1: Quiz 05 Practice, <a href="studyguide5.html">Study Guide 5</a></p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due April 11th</p>
 </li>
 <li>
-<p>Assignment 10 is due April 4 <a href="assts/asst10.html">Assignment 10</a>: Sending mixed signals</p>
+<p>Lab April 8: Code Jam 05</p>
+</li>
+<li>
+<p>Class April 10: <strong>Quiz 05</strong>, <a href="studyguide5.html">Study Guide 5</a></p>
 </li>
 </ul>
 </div>
@@ -427,7 +430,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst11.">Assignment 11</a>: Due April 4th</p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due April 11th</p>
 </li>
 <li>
 <p>Class April 10: <strong>Quiz 05</strong></p>
@@ -957,7 +960,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-30 11:32:28 -0400
+Last updated 2025-04-05 12:06:33 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
