--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -15,17 +15,17 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_assignment_11_glow">Assignment 11: Glow</a></li>
-<li><a href="#_glow">1. Glow</a>
+<li><a href="#_background">Background</a>
 <ul class="sectlevel2">
-<li><a href="#_extract_bright_areas">1.1. Extract bright areas</a></li>
-<li><a href="#_blur">1.2. Blur</a></li>
-<li><a href="#_glow_2">1.3. Glow</a></li>
+<li><a href="#_extract_bright_areas">Extract bright areas</a></li>
+<li><a href="#_blur">Blur</a></li>
+<li><a href="#_glow">Glow</a></li>
 </ul>
 </li>
-<li><a href="#_single_threaded">2. Single-threaded</a></li>
-<li><a href="#_multi_threaded">3. Multi-threaded</a></li>
-<li><a href="#_submit_your_work">4. Submit your work</a></li>
-<li><a href="#_grading_rubric">5. Grading Rubric</a></li>
+<li><a href="#_single_threaded">1. Single-threaded</a></li>
+<li><a href="#_multi_threaded">2. Multi-threaded</a></li>
+<li><a href="#_submit_your_work">3. Submit your work</a></li>
+<li><a href="#_grading_rubric">4. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -75,7 +75,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_glow">1. Glow</h2>
+<h2 id="_background">Background</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>In this assignment, you will implement a glow filter for images. You will implement the filter both single- and
@@ -98,7 +98,7 @@ multi-threaded.</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Apply glow to an image requires three steps:</p>
+<p>This filter requires three steps:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -106,7 +106,7 @@ multi-threaded.</p>
 <p>Extracting bright areas into a separate image</p>
 </li>
 <li>
-<p>Blurring the bright image</p>
+<p>Blurring the bright pixels</p>
 </li>
 <li>
 <p>Adding the blurred image to the original</p>
@@ -126,7 +126,7 @@ We will work with PPM files for this assignment.
 </table>
 </div>
 <div class="sect2">
-<h3 id="_extract_bright_areas">1.1. Extract bright areas</h3>
+<h3 id="_extract_bright_areas">Extract bright areas</h3>
 <div class="paragraph">
 <p>For each pixel, you can compute its brightness as the average of its red, green, and blue values. E.g.</p>
 </div>
@@ -138,7 +138,7 @@ We will work with PPM files for this assignment.
 <div class="paragraph">
 <p>We can compare this brightness to a threshold, say 200, to determine if we should apply the glow to this area.
 For the image below, we iterated through every pixel in the original image, computed its brightness, and
-then saved a white pixel to a new image if the pixel exceeded the threshold.</p>
+then saved its brightness to a new image if the pixel exceeded the threshold.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -147,7 +147,7 @@ then saved a white pixel to a new image if the pixel exceeded the threshold.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_blur">1.2. Blur</h3>
+<h3 id="_blur">Blur</h3>
 <div class="paragraph">
 <p>For this assignment, we will apply a box blur to each pixel in the image computed in the previous step.</p>
 </div>
@@ -157,9 +157,9 @@ only at the immediate neighbors of the pixel (i,j), the new color would be as fo
 </div>
 <div class="stemblock">
 <div class="content">
-\[newPixel_{i,j} = (p_{i-1,j-1} + p_{i,j-1} + p_{i+1,j-1}
-                 p_{i-1,j}   + p_{i,j}   + p_{i+1,j}
-                 p_{i-1,j+1} + p_{i,j+1} + p_{i+1,j+1} )/9\]
+\[new_{i,j} = (p_{i-1,j-1} + p_{i,j-1} + p_{i+1,j-1} +
+             p_{i-1,j}   + p_{i,j}   + p_{i+1,j} +
+             p_{i-1,j+1} + p_{i,j+1} + p_{i+1,j+1} )/9\]
 </div>
 </div>
 <div class="paragraph">
@@ -168,7 +168,7 @@ width 3 and height 3.</p>
 </div>
 <div class="paragraph">
 <p>We compute the blur separately for each color channel (read, blue, green). In the image below, we used a
-box size of 49. In other words, we used the 24 neighbors that were left, right, above, and below of the current
+box size of 25. In other words, we used the 24 neighbors that were left, right, above, and below of the current
 pixel. If a pixel is near the edge of the image, we can clamp the blur indices so they stay in the image.</p>
 </div>
 <div class="imageblock">
@@ -183,32 +183,32 @@ pixel. If a pixel is near the edge of the image, we can clamp the blur indices s
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-The glow will look better with a gaussian blur. Feel free to implement one instead!
+The glow will look better with a gaussian blur. Feel free to implement one instead
 </td>
 </tr>
 </table>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_glow_2">1.3. Glow</h3>
+<h3 id="_glow">Glow</h3>
 <div class="paragraph">
-<p>The glow effect is achieved by adding the blurred image with the original image.</p>
+<p>The glow effect is achieved by adding the blurred image (bij) with the original image (oij).</p>
 </div>
 <div class="stemblock">
 <div class="content">
-\[newPixel_{i,j} = originalPixel_{i,j} + blurPixel_{i,j}\]
+\[new_{i,j} = o_{i,j} + b_{i,j}\]
 </div>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="img/blur.png" alt="blur">
+<img src="img/glow.png" alt="glow">
 </div>
 </div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_single_threaded">2. Single-threaded</h2>
+<h2 id="_single_threaded">1. Single-threaded</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>In the file, <code>glow.c</code>, implement a single-threaded program that applies a glow effect to the image "earth-small.ppm".
@@ -242,7 +242,7 @@ sys     0m0.001s</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_multi_threaded">3. Multi-threaded</h2>
+<h2 id="_multi_threaded">2. Multi-threaded</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>In the file, <code>glow_multithreaded.c</code>, implement a program that applies a glow effect using multiple threads.
@@ -288,7 +288,7 @@ sys     0m0.000s</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_submit_your_work">4. Submit your work</h2>
+<h2 id="_submit_your_work">3. Submit your work</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Submit both your code and images.</p>
@@ -310,7 +310,7 @@ $ git status</code></pre>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_grading_rubric">5. Grading Rubric</h2>
+<h2 id="_grading_rubric">4. Grading Rubric</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><strong>Assignment rubrics</strong></p>
@@ -375,7 +375,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-05 12:47:06 -0400
+Last updated 2025-04-05 12:59:03 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
