post assignment; update announcements

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
 <p><a href="assts/asst11.html">Assignment 11</a>: Due April 11th</p>
 </li>
 <li>
-<p>Lab April 8: Code Jam 05</p>
+<p><a href="assts/asst12.html">Assignment 12</a>: Due April 18th</p>
 </li>
 <li>
-<p>Class April 10: <strong>Quiz 05</strong>, <a href="studyguide5.html">Study Guide 5</a></p>
+<p>Lab April 15: <a href="studyguide6.html">Study Guide 6</a></p>
+</li>
+<li>
+<p>Final Exam: 9:30am - 12:30pm, Tuesday, May 6th, BYC 127</p>
 </li>
 </ul>
 </div>
@@ -422,7 +425,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 8, 10 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
+<p><strong>Threads III/ Memory</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -445,7 +448,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 15, 17 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Malloc</strong></p>
+<p><strong>Memory</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -453,7 +456,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read:"My malloc: mylloc and mhysa" by Johan Montelius</p>
 </li>
 <li>
-<p><a href="assts/asst11.">Assignment 11</a>: Due April 18</p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
+</li>
+<li>
+<p><a href="assts/asst12.html">Assignment 12</a>: Due April 18</p>
 </li>
 <li>
 <p>Lab April 15: Quiz 06 Practice</p>
@@ -465,29 +471,6 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">April 22, 24 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
-</li>
-<li>
-<p>Lab April 22: <strong>Code Jam06</strong></p>
-</li>
-<li>
-<p>Class April 24: <strong>Quiz 04</strong></p>
-</li>
-<li>
-<p><a href="assts/asst12.">Assignment 12</a>: Due April 25</p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">April 29, May 1 <a id="week15"></a></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
 <p><strong>Code Optimization, C++</strong></p>
 </div>
 <div class="ulist">
@@ -496,7 +479,27 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
+<p><a href="assts/asst13.html">Assignment 13</a>: Due May 1, <strong>Hardcopy in class - no late work accepted</strong></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">April 29, May 1 <a id="week15"></a></p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Review</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>LAB IS CANCELED!</strong></p>
+</li>
+<li>
 <p>Lab April 29, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
+</li>
+<li>
+<p>In-Class: Practice Final</p>
 </li>
 </ul>
 </div></div></td>
@@ -960,7 +963,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-05 12:06:33 -0400
+Last updated 2025-04-12 14:21:56 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
